fixed gaps on tips section

--- a/style.css
+++ b/style.css
@@ -505,8 +505,13 @@
 .tips__heading {
     display: flex;
     flex-direction: column;
-    gap: 10px;
+    gap: 20px;
     align-items: center;
+}
+
+.title_tips {
+    text-align: center;
+    max-width: 500px;
 }
 
 .tip__image {
